--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -6,28 +6,96 @@
     height: auto;
     display: flex;
     max-width: 100%;
+    @include responsive(mobileS) {
+        height: 100%;
+        width: 100%;
+    }
+    @include responsive(mobileL) {
+        height: 100%;
+        width: 100%;
+    }
+    @include responsive(tablet) {
+        height: 100%;
+        width: 100%;
+    }
     .login-container {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         width: 50%;
+        @include responsive(mobileS) {
+            width: 100%;
+            max-height: 100%;
+        }
+        @include responsive(mobileL) {
+            width: 100%;
+            max-height: 100%;
+        }
+        @include responsive(tablet) {
+            width: 100%;
+            max-height: 100%;
+        }
         .login-info {
+            @include responsive(mobileS) {
+                margin: 15px auto 0 auto;
+            }
+            @include responsive(mobileL) {
+                margin: 15px auto 0 auto;
+            }
+            @include responsive(tablet) {
+                position: relative;
+                top: 140px;
+                left: 60px;
+            }
             margin-right: 14rem;
             h1 {
                 font-size: 60px;
                 color: $text-color;
                 margin-top: 3rem;
+                @include responsive(mobileS) {
+                    font-size: 40px;
+                }
+                @include responsive(tablet) {
+                    // margin-top: 1rem;
+                }
             }
             p {
                 font-size: 16px;
                 color: $text-color;
                 margin-top: 27px;
+                @include responsive(mobileS) {
+                    font-size: 14px;
+                }
             }
         }
         .login-form {
+            @include responsive(mobileS) {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            @include responsive(mobileL) {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            @include responsive(tablet) {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
             .input {
                 display: flex;
+                @include responsive(mobileS) {
+                    width: 260px;
+                }
                 input {
                     display: flex;
                     flex-direction: column;
@@ -45,14 +113,47 @@
                     &:active {
                         outline: none;
                     }
+                    @include responsive(mobileS) {
+                        width: 290px;
+                    }
+                    @include responsive(mobileL) {
+                        width: 320px;
+                        margin-left: 80px;
+                    }
+                    @include responsive(tablet) {
+                        margin-left: 110px;
+                    }
                 }
                 img {
                     position: relative;
                     margin-left: 100px;
                     margin-bottom: 30px;
+                    @include responsive(mobileS) {
+                        margin-left: 40px;
+                        width: 20px;
+                    }
+                    @include responsive(mobileL) {
+                        margin-left: 50px;
+                        width: 20px;
+                    }
                 }
             }
             h2 {
+                @include responsive(mobileS) {
+                    margin-top: 50px;
+                    position: relative;
+                    right: 76px;
+                }
+                @include responsive(mobileL) {
+                    margin-top: 50px;
+                    position: relative;
+                    right: 96px;
+                }
+                @include responsive(tablet) {
+                    margin-top: 180px;
+                    position: relative;
+                    right: 147px;
+                }
                 margin-top: 97px;
                 font-weight: 400;
                 font-size: 30px;
@@ -71,7 +172,18 @@
                 margin-top: 115px;
                 margin-bottom: 200px;
                 font-weight: bold;
-                
+                @include responsive(mobileS) {
+                    width: 260px;
+                    height: 60px;
+                    margin-bottom: 20px;
+                    
+                }
+                @include responsive(mobileL) {
+                    width: 320px;
+                    height: 65px;
+                    margin-bottom: 20px;
+                    
+                }
             }
             .input-error {
                 border: 1px solid $error-color !important;
@@ -80,22 +192,55 @@
     }
     .logo-container {
         position: relative;
+        @include responsive(mobileS) {
+            position: absolute;
+        }
+        @include responsive(mobileL) {
+            position: absolute;
+        }
+        @include responsive(tablet) {
+            position: absolute;
+        }
         width: 50%;
         #bg {
             width: 100%;
             height: 100%;
             object-fit: fill;
             @include responsive(mobileS) {
-                
+                display: none;
             }
+            @include responsive(mobileL) {
+                display: none;
+            }
+            @include responsive(tablet) {
+                display: none;
+            }
+            
         }
         #logo {
             position: absolute;
             left: 35%;
             top: 2.5%;
             @include responsive(mobileS) {
-                position: static;
-                width: 100px;
+                position: absolute;
+                width: 250px;
+                top: 20px;
+                left: 35px;
+                margin-bottom: 20px;
+            }
+            @include responsive(mobileL) {
+                position: absolute;
+                width: 250px;
+                top: 20px;
+                left: 75px;
+                margin-bottom: 20px;
+            }
+            @include responsive(tablet) {
+                position: absolute;
+                width: 250px;
+                top: 20px;
+                left: 250px;
+                margin-bottom: 20px;
             }
         }
     }
@@ -108,4 +253,15 @@
     font-size: 16px;
     color: $error-color;
     padding-left: 70px;
+    @include responsive(mobileS) {
+        padding-left: 15px;
+        align-items: center;
+    }
+    @include responsive(mobileL) {
+        align-items: center;
+        padding-right: 40px;
+    }
+    @include responsive(tablet) {
+
+    }
 }
