--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -55,9 +55,10 @@
                 margin-top: 3rem;
                 @include responsive(mobileS) {
                     font-size: 40px;
+                    margin-top: 5rem;
                 }
                 @include responsive(tablet) {
-                    // margin-top: 1rem;
+                    margin: 0;
                 }
             }
             p {
@@ -73,6 +74,7 @@
             @include responsive(mobileS) {
                 width: 100%;
                 display: flex;
+                height: 100%;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
@@ -176,13 +178,17 @@
                     width: 260px;
                     height: 60px;
                     margin-bottom: 20px;
-                    
+                    margin-top: 50px;
                 }
                 @include responsive(mobileL) {
                     width: 320px;
                     height: 65px;
                     margin-bottom: 20px;
-                    
+                }
+                @include responsive(tablet) {
+                    margin-bottom: 10rem;
+                    margin-top: 50px;
+                    height: 65px;
                 }
             }
             .input-error {
@@ -262,6 +268,7 @@
         padding-right: 40px;
     }
     @include responsive(tablet) {
-
+        align-items: center;
+        padding-right: 50px;
     }
 }
