responsive login component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -44,7 +44,7 @@
         <div class="footer-text">
             <p>
                 Essa janela do navegador é usada para manter sua sessão de autenticação ativa. 
-                Deixe-a <br> aberta em segundo plano e abra uma nova janela para continuar a navegar.
+                Deixe-a aberta em segundo plano e abra uma nova janela para continuar a navegar.
             </p>
             <img src="../../../assets/line.png" alt="">
         </div>
