login component changes

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,37 +1,3 @@
-<!-- <div class="container-fluid">
-    <div class="row mt-5">
-        <div class="col"></div>
-        <div class="col-4">
-            <div class="card shadow">
-                <div class="card-body">
-                    <form>
-                        <div class="mb-3">
-                            <h4 class="text-dark text-muted">Login</h4>
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" name="email" [(ngModel)]="email">
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" name="password" [(ngModel)]="password">
-                        </div>
-                        <button type="button" class="btn btn-info" (click)="login()">Login</button>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a href="/register" style="text-decoration: none;">Need a account? <span class="text-danger">Register here</span></a>
-                            </div>
-                            <div class="col-md-6">
-                                <a class="text-dark" style="text-decoration: none;">Forgot password?</a>
-                            </div>
-                        </div>
-                      </form>
-                </div>
-            </div>
-        </div>
-        <div class="col"></div>
-    </div>
-</div> -->
 <div class="containerr">
     <div class="login-container">
         <div class="login-info mark-font">
@@ -48,7 +14,6 @@
             >
                 <div class="input">
                     <input
-                        (change)="moveIcons()"
                         id="email"
                         type="email" 
                         formControlName="email"
@@ -57,14 +22,13 @@
                         placeholder="Usuário"
                     >
                     <img 
-                        [@moveIcon]="isMoved ? 'moveIn' : 'moveOut'"
+                        [class.out-input]="email == ''" [class.in-input] ="email != '' && email != ' '"
                         src="../../../assets/icon-user.svg" 
                         id="user-icon-default"
                     >
                 </div>
                 <div class="input">
                     <input
-                        (change)="moveIcons()"
                         id="password" 
                         type="password" 
                         formControlName="password"
@@ -73,7 +37,7 @@
                         placeholder="Senha"
                     >
                     <img 
-                        [@moveIcon]="isMoved ? 'moveIn' : 'moveOut'"
+                        [class.out-input]="password == ''" [class.in-input] ="password != '' && password != ' '"
                         src="../../../assets/icon-password.svg" 
                         id="password-icon-default" 
                     >
