--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,6 @@
 @import '../../../styles.scss';
 
+
 .containerr {
     background: linear-gradient(180deg, #33383D 0%, #1C1D20 100%);
     box-shadow: 4px 4px 70px rgba(0, 0, 0, 0.25);
@@ -48,7 +49,7 @@
                 top: 140px;
                 left: 60px;
             }
-            margin-right: 14rem;
+            margin-right: 6.5rem;
             h1 {
                 font-size: 60px;
                 color: $text-color;
@@ -74,7 +75,6 @@
             @include responsive(mobileS) {
                 width: 100%;
                 display: flex;
-                height: 100%;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
@@ -95,6 +95,7 @@
             }
             .input {
                 display: flex;
+                position: relative;
                 @include responsive(mobileS) {
                     width: 260px;
                 }
@@ -127,9 +128,9 @@
                     }
                 }
                 img {
-                    position: relative;
-                    margin-left: 100px;
-                    margin-bottom: 30px;
+                    position: absolute;
+                    right: -40px;
+                    top: 20%;
                     @include responsive(mobileS) {
                         margin-left: 40px;
                         width: 20px;
@@ -270,5 +271,25 @@
     @include responsive(tablet) {
         align-items: center;
         padding-right: 50px;
+    }
+}
+
+.in-input {
+    position: absolute;
+    transform: translateX(-63px);
+    transition: .5s;
+    @include responsive(mobileS) {
+      transform: translateX(0);
+      right: 30px;
+    }
+}
+
+.out-input {
+    position: absolute;
+    transition: 0.5s;
+    right: -40px;
+    top: 15%;
+    @include responsive(mobileS) {
+     right: 30px;
     }
 }
