--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -195,7 +195,7 @@
                     margin-bottom: 20px;
                 }
                 @include responsive(tablet) {
-                    margin-bottom: 10rem;
+                    margin-bottom: 20px;
                     margin-top: 50px;
                     height: 65px;
                 }
