--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -44,7 +44,7 @@
         <div class="footer-info">
             <div class="footer-text">
                 <p>
-                    Essa janela do navegador é usada para manter sua sessão de autenticação ativa. 
+                    Essa janela do navegador é usada para manter sua sessão de autenticação ativa.
                     Deixe-a aberta em segundo plano e abra uma nova janela para continuar a navegar.
                 </p>
                 <img src="../../../assets/line.png" alt="">
@@ -52,7 +52,7 @@
         </div>
         <div class="refresh-timeout">
             <p>Apllication <br> refresh in</p>
-            <p class="refresh-time"><span>{{ data }}</span> seconds</p>
+            <p class="refresh-time"><span>{{ time }}</span> seconds</p>
         </div>
         <div class="footer-buttons">
             <div class="continue">
