link style change

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -50,7 +50,10 @@
                     Continuar
                 </button>
             </form>
-            <a id="link" href="/register">Nao possui uma conta? Cadastre-se</a>
+            <div class="link-wrapper">
+                <span>Nao possui uma conta?</span>
+                <a id="link" href="/register">ㅤCadastre-se</a>
+            </div>
         </div>
     </div>
     <div class="logo-container">
