--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -153,7 +153,7 @@
                 color: $white;
                 background: linear-gradient(90deg, #FF2D04 0%, #C13216 100%);
                 box-shadow: inset 5px 5px 15px rgba(0, 0, 0, 0.15);
-                border: 2px solid #FF2D04;
+                border: none;
                 border-radius: 50px;
                 margin-top: 105px;
                 margin-bottom: 25px;
@@ -216,7 +216,7 @@
             @include responsive(tablet) {
                 display: none;
             }
-            
+
         }
         #logo {
             position: absolute;
